public/stylesheets/style.css
body {
  font-family: 'Khula', sans-serif !important;
  font-size: 14px;
  background-color: #f2f2f2;
  padding-top: 60px;
  padding-left: 25px;
  padding-right: 25px;
  padding-bottom: 25px;
}

#login-body {
  background-color: #fff;
  text-align: center;
}

a {
  margin: 0px;
}

#list {
  padding: 30px;
  border-radius: 10px;
  -moz-column-break-inside: avoid;
  -webkit-column-break-inside: avoid;
  column-break-inside: avoid;
  display: inline-block;
  margin: 15px;
  border: 2px solid #FAFAFA;
  box-shadow: 0 1px 2px rgba(34, 25, 25, 0.4);
  background: #FEFEFE;
}

#tag, small {
  padding: 5px;
  border-radius: 5px;
  display: inline-block;
}

small:hover, #update:hover, #delete:hover, #hide_menu:hover {
  -webkit-transform: scale(1.1);
  -ms-transform: scale(1.1);
  transform: scale(1.1);
  transition-duration: 0.5s;
  -webkit-backface-visibility: hidden;
}

#item_model {
  background-color: #012561 !important;
  margin-bottom: 20px;
  padding: 20px;
  text-align: left !important;
}

.list_title {
  color: #000000;
  margin-bottom: 20px;
  margin-top: 0px;
}

#remove {
  font-size: 8px;
  margin-left: 5px;
}

#name_title, #remove {
  font-size: 20px;
  display: inline-block;
  color: #ffffff;
}

#columns {
  color: #ffffff;
  -moz-column-count: 2;
  -moz-column-gap: 15px;
  -moz-column-fill: auto;
  -webkit-column-count: 2;
  -webkit-column-gap: 15px;
  -webkit-column-fill: auto;
  column-count: 2;
  column-gap: 15px;
  column-fill: auto;
}

@media (max-width: 1223px) {
  #columns {
      column-count: 1;
      text-align: center;
  }
  body {
    padding-left: 10px;
    padding-right: 10px;
    padding-top: 60px;
  }
}

#brello {
  font-size: 4em;
}

#brello, #user_info {
  text-align: center;
  color: #262626;
}

#list_form, #edit_form {
  /*width: 500px;*/
  width: 600px;
}

.button {
  text-align: center;
  color: #999999;
  text-decoration: none;
  padding: 0px;
  background: transparent;
  height: 35px;
  border-radius: 10px;
  width: 60px;
  border: 1px solid #cccccc;
}

#options, #update, #delete {
  display: inline-block;
  height: 18px;
  float: right;
  margin-left: 10px;
}

#title_input, .content_input{
  font-size: 20px;
  height: 20px;
  width: 425px;
  margin-right: 5px;
  background-color: transparent;
  border: none;
  color: #595959;
  padding: 0px 3px;
  text-decoration: none;
  display: inline-block;
}

.title_form {
  width: 500px;
}

.title_form > input:focus,
#form > input:focus,
.title_form {
  outline: none;
  background-color: transparent;
}

.new_content_input > input:focus,
#title_input,
#title_input > input:focus {
  font-size: 20px;
  height: 20px;
  text-decoration: none;
  border: none;
  color: #737373;
  outline: none;
  background-color: transparent;
}

.new_content_input, .new_content_input > input:focus {
  font-size: 22px;
  width: 470px;
  margin-right: 10px;
  background-color: transparent;
  border: none;
  color: #bfbfbf;
  text-decoration: none;
  outline: none;
}

#edit_form > .button, #login_form > .button {
  background: transparent;
  border:  1px solid white;
  color: #ffffff;
}

.button:hover {
  background-color: #f2f2f2;
}

#edit_form > .button:hover {
  background-color: #4d004d;
}

#logout_figure {
  position: fixed;
  top: 70px;
  right: 30px;
  z-index: 10;
  opacity: 0.7;
}
#logout {
  height: 50px;
}

#logout_figure:hover, #logout_figure:hover > figcaption {
  opacity: 1;
  display: block;
}

figcaption {
  margin-top: 5px;
  text-align: center;
  font-size: 12px;
  display: none;
}

.login_input {
  text-align: center;
  font-size: 30px;
  height: 40px;
  text-decoration: none;
  color: #737373;
  outline: none;
  background: transparent;
  border: 0;
  border-bottom: 1px solid #e6e6e6;
}

.login_input > input:focus {
  width: 280px;
  font-size: 30px;
  height: 40px;
  text-decoration: none;
  color: #737373;
  outline: none;
  background: transparent;
}

#login_header {
  margin-top: 100px;
  text-align: center;
  margin-bottom: 50px;
}

.login_form > .button {
  margin-top: 20px;
  text-align: center;
  color: #999999;
  text-decoration: none;
  padding: 0px;
  background: transparent;
  height: 28px;
  font-size: 15px;
  border-radius: 10px;
  width: 200px;
}

@media (max-width: 767px){
  #options, #update, #delete {
    height: 30px;
  }
}

#add_tag {
  position: fixed;
  top: 150px;
  right: 30px;
  z-index: 10;
  opacity: 0.7;
}

#add_tag:hover {
  opacity: 1;
}

#tag_menu {
  position: fixed;
  bottom: 0px;
  text-align: center;
  z-index: 10;
  color: #ffffff; 
}

@media (max-width: 999px){
  #tag_menu span {
    display: inline-block;
  }
  #tag_menu #tagsCollection {
    height: 100%
  }
}

#hide_menu {
  float: right;
  padding: 10px;
  color: #000000;
}

.delete_tag {
  padding-left: 5px;
  padding-right: 5px;
  height: 12px;
  opacity: 0.5;
}

#add_tag:hover > figcaption {
  display: block;
}

figure:hover > figcaption {
  display: block;
}

#intro > p {
  text-align: center;
  z-index: -1;
  font-size: 16px;
}

#app {
  z-index: 1;
}

